@@ -23,7 +23,7 @@ BcTable {
       class       = "wall"
       Type        = "slide"
       Profile     = "Constant"
-      Normal      = (1.0, 0.0, 0.0)
+      OrientationVector = (1.0, 0.0, 0.0)
       Velocity    = 1.0
       Medium      = "fe"
     }
@@ -31,7 +31,7 @@ BcTable {
     inlet_1 {
       class       = "SpecifiedVelocity"
       Profile     = "Constant"
-      Normal      = (1.0, 0.0, 0.0)
+      OrientationVector = (1.0, 0.0, 0.0)
       velocity    = 5.0
       Medium      = "air"
     }
