@@ -31,7 +31,7 @@ BcTable {
     inlet {
       class       = "SpecifiedVelocity"
       Profile     = "Constant"
-      Normal      = (1.0, 0.0, 0.0)
+      OrientationVector = (1.0, 0.0, 0.0)
       velocity    = 3.0
       Medium      = "air"
       Temperature = 20
