@@ -26,7 +26,7 @@ BCTable {
       class     = "SpecifiedVelocity"
       Medium    = "air"
       Profile   = "Constant"
-      Normal    = (1.0, 0.0, 0.0)
+      OrientationVector = (1.0, 0.0, 0.0)
       velocity  = 27.8
     }
 
