@@ -23,7 +23,7 @@ BcTable {
       class       = "wall"
       Type        = "slide"
       Profile     = "Constant"
-      Normal      = (-1.0, 0.0, 0.0)
+      OrientationVector = (-1.0, 0.0, 0.0)
       Velocity    = 1.8e-2
       Medium      = "fe"
     }
